k8s/hello-world/hello-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xinchao-app-service
  namespace: hello-world
spec:
  selector:
    app: xinchao-app-pod
  ports:
    - protocol: TCP
      port: 8889
      targetPort: 8888
  type: NodePort
