k8s/hello-world/hello-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: xinchao-ingress
  namespace: hello-world
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: xinchao.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: xinchao-app-service
                port:
                  number: 8889
